Added LabyrinthContext.getNextContext() implementation.